prevent image from distortion

--- a/css/imago.sass
+++ b/css/imago.sass
@@ -23,10 +23,10 @@
 
   img.imagox23
     max-width: 100%
-    max-height: 100%
+    // max-height: 100%
 
   div.imagox23
-    width: 100%
+    width:  100%
     height: 100%
 
   // &.resizing
